# cookapp

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: backend-check.yml
additional/: fill_db.ipynb
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  test.db
backend/additional/: Planner - Recipes (EN).csv  db_to_csv.ipynb  fill_db.ipynb  fill_db_from_csvs.ipynb  fill_db_from_excel.ipynb
backend/additional/db_dump/: fridge_items.csv  fridge_logs.csv  ingredients.csv  meal_types.csv  recipe_ingredients.csv  recipe_tags.csv  recipes.csv  schedule.csv  users.csv
backend/alembic/: env.py
backend/alembic/old_versions/: 20250818_fastapi_users_add_fields.py  3e17bd108b35_init_tables.py  f5b7b6699bfe_merge_heads.py
backend/alembic/versions/: 2fdc82b10c29_add_missing_columns.py  3e5a5b2d3e91_add_schedule_and_meal_types_tables.py  61ffa56c8dfc_add_instruction_link_to_recipe.py  63544c60111d_initial_baseline.py
backend/app/: database.py  helpers.py  main.py  models.py  schemas.py  users.py
backend/app/api/: fridge_items.py  ingredients.py  meal_types.py  recipes.py  schedule.py  shopping_list.py
backend/scripts/: create_user.ipynb  create_user.py
backend/tests/: conftest.py  test.db  test_auth.py  test_fridge_items.py  test_ingredients.py  test_main.py  test_recipes.py  test_schedule.py  test_shopping_list.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  server.js
frontend/src/: .prettierrc  App.css  App.scss  App.tsx  api.ts  config.ts  index.css  (+2 more)
(+53 files in other folders)
