[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.4",
    "bcrypt>=4.3.0",
    "cloud-sql-python-connector>=1.18.4",
    "email-validator>=2.2.0",
    "fastapi>=0.116.1",
    "fastapi-users[oauth,sqlalchemy]>=14.0.1",
    "google-api-python-client>=2.179.0",
    "google-cloud>=0.34.0",
    "passlib[bcrypt]>=1.7.4",
    "pg8000>=1.31.4",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.42",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
lint = [
    "ruff>=0.12.8",
]
